adedit.log
Traceback (most recent call last):
  File "/home/gerrit/workspace/Privat/adEdit/bin/adedit.py", line 11, in <module>
    from py.EditorWindow import EditorWindow
  File "/home/gerrit/workspace/Privat/adEdit/py/EditorWindow.py", line 11, in <module>
    from py.Languages.LanguageSelector import LanguageSelector
  File "/home/gerrit/workspace/Privat/adEdit/py/Languages/LanguageSelector.py", line 4
    class LanguageSelector
                          ^
SyntaxError: expected ':'

TEST